# tf-keras-stacked-hourglass-keypoint-detection

./: LICENSE  README.md  demo.py  detector.py  eval.py  multi_person_demo.py  requirements.txt  train.py
common/: data_utils.py  model_utils.py  utils.py
common/backbones/: ghostnet.py  mobilenet_v3.py  peleenet.py
configs/: animal_pose_classes.txt  animal_pose_match_point.txt  animal_pose_skeleton.txt  coco_match_point.txt  coco_skeleton.txt  mpii_classes.txt  mpii_match_point.txt  mpii_skeleton.txt
hourglass/: blocks.py  callbacks.py  data.py  loss.py  model.py  postprocess.py
inference/: README.md
inference/MNN/: CMakeLists.txt  hourglassKeypoint.cpp
inference/MNN/configs/: quantizeConfig.json
inference/tflite/: CMakeLists.txt  hourglassKeypoint.cpp  hourglassKeypoint.h
simple_baselines/: layers.py  model.py
tools/: coco_annotation.py  draw_train_curve.py  headbox_merge.py  keras_to_tensorflow.py  mpii_annotation.py  mpii_eval.py  post_train_quant_convert.py  pycoco_eval.py  validate_hourglass.py
tools/dataset_converter/: animal_pose_annotation.py  coco_annotation.py  dataset_visualize.py  mpii_annotation.py
tools/evaluation/: convkernel_check.py  featuremap_check.py  model_statistics.py  mpii_eval.py  validate_hourglass.py  validate_hourglass_multiperson.py
tools/misc/: augment_test.py  draw_train_curve.py  headbox_merge.py  keypoints_compare.py  keypoints_compare_live_demo.py
tools/misc/MPII_compare/: 1_coach.json  1_user_1.json  1_user_2.json  1_user_3.json  2_coach.json  2_user_1.json
tools/misc/MSCOCO_compare/: 1_coach.json  1_user_1.json  1_user_2.json  2_coach.json  (+1 more)
tools/model_converter/: keras_to_onnx.py  keras_to_tensorflow.py  onnx_edit.py  post_train_quant_convert.py  tensorflow_to_rknn.py
(+122 files in other folders)
